Fix "Copy into new Layer" action when working with vector layers

Working with vector data is tricky, now the behavior is made more consistent:

1) If a vector layer is active and shape selection tool is active:
   a) "Copy into new Layer" copies a shape into the new layer
   b) Ctrl+C + Ctrl+V copies a shape into the same layer

2) If a vector layer is active, but no shape is selected in the tool
   a) both, "Copy into new Layer" and Ctrl+C+V copy raster data defined by
       the global selection into the new layer

BUG:418317